--- a/css/home.css
+++ b/css/home.css
@@ -2,87 +2,93 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
+:root{
+    --cor-secundaria: #E3813E;
+    --cor-primaria: #212227;
+    --cor-de-fundo: #e4e4e4;
+}
+
+header{
+    background-color: var(--cor-primaria);
+    padding: 2em;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #868686;
-    padding: 15px 30px;
-    color: rgb(70, 70, 70);
+    justify-content:space-between;
 }
 
-header h1 {
-    font-size: 1.8rem;
-    color: #F5D516;
+header h1{
+    font-family:"Boldonse", system-ui;
+    font-size: medium;
+
+    color: var(--cor-secundaria);
 }
 
-.search-box {
-    display: flex;
-    align-items: center;
-    background: white;
-    border-radius: 5px;
-    padding: 5px;
-    width: 40%;
-}
-
-.search-box input {
-    border: none;
-    outline: none;
-    padding: 8px;
-    width: 100%;
-    font-size: 1rem;
-}
-
-.search-box button {
-    background: #F5D516;
-    border: none;
-    padding: 8px 12px;
-    cursor: pointer;
-    color: white;
-    font-size: 1rem;
-    border-radius: 5px;
-}
-
-nav {
-    display: flex;
-    gap: 20px;
-}
-
-nav a {
-    color: rgb(46, 46, 46);
+a{
     text-decoration: none;
-    font-size: 1rem;
-    transition: 0.3s;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    margin-right: 1em;
 }
 
-nav a:hover {
-    color: #F5D516;
+a:hover{
+    color: var(--cor-secundaria);
 }
 
-nav a i {
-    font-size: 1.2rem;
+.banner{
+    display: flex;
+    justify-content:center;
+
+    height: 24em;
+}
+
+.banner-left h1{
+    font-size: 4em;
+    font-family: "Boldonse", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: -5px;
+}
+
+.banner-left p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    letter-spacing: 5px;
+}
+
+.banner-left{
+    height: 20em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-rigth{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 15em;
 }
 
 
-#banner{
-    width: 100vw;
-    height: 90vh;
-    background-color: black;
+body{
+    background-color: var(--cor-de-fundo);
 }
 
-
-@media (max-width: 600px) {
-    header {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    nav {
-        margin-top: 10px;
-        flex-direction: column;
-        gap: 10px;
-    }
+.menu{
+    background-color: var(--cor-primaria);
+    display: flex;
+    justify-content: center;
+    gap: 5em;
+    padding:1em;
 }
+
+.menu a{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    letter-spacing: 3px;
+}
+
