--- a/css/home.css
+++ b/css/home.css
@@ -92,3 +92,57 @@ body{
     letter-spacing: 3px;
 }
 
+.prateleira{
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(4,19rem);
+    max-width: 800px;
+    margin: 1rem auto;
+    justify-content: center;
+    gap: 1.5rem;
+
+}
+
+.produtos{
+    height: 30rem;
+    width: 19rem;
+    text-align: center;
+    border-radius: 1rem;
+
+    border: 1px solid gray;
+    background-color: #2122273a;
+}
+
+.produtos img{
+    width: 20rem;
+    height: auto;
+}
+
+.produtos h1{
+    font-family:"Boldonse", system-ui;
+    font-weight: 100;
+    font-size: medium;
+}
+
+.produtos p{
+    font-family: system-ui;
+    font-size: 1.4rem;
+    margin-bottom: 2rem;
+}
+
+.produtos a{
+    background-color: var(--cor-de-fundo);
+    color: var(--cor-secundaria);
+    border: 1px solid var(--cor-secundaria);
+    padding: 1rem;
+    border-radius: 2rem;
+    text-align: center;
+
+    
+}
+
+.produtos a:hover{
+    color: var(--cor-de-fundo);
+    background-color:var(--cor-secundaria) ;
+}
+
