--- a/css/home.css
+++ b/css/home.css
@@ -175,3 +175,77 @@ body{
     font-weight: 400;
     letter-spacing: 5px;
 }
+
+.formulario-animado {
+    max-width: 400px;
+    width: 90%;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    display: none;
+
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+
+    font-family: "Boldonse", system-ui;
+    color: var(--cor-secundaria);
+}
+
+
+
+.formulario-animado.ativo {
+    display: block;
+    opacity: 1;
+    transform: translate(-50%, -50%);
+}
+
+.formulario-animado input,
+.formulario-animado button {
+    width: 90%;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.formulario-animado button {
+    background-color: var(--cor-de-fundo);
+    color: var(--cor-secundaria);
+    font-size: large;
+    font-weight: bolder;
+    border: 1px solid var(--cor-secundaria);
+    cursor: pointer;
+}
+
+.formulario-animado button:hover {
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
+    font-size: large;
+    font-weight: bolder;
+    border: 1px solid var(--cor-secundaria);
+    cursor: pointer;
+}
+
+
+.fundo-escuro {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.fundo-escuro.ativo {
+display: block;
+}
